src/test/deca/syntax/valid/SansObjet/IneqExpr2-Single.deca
// Description:
//    Lower or equal expression.
//
// Results:
//    (void)
//
// Historique:
//    cree le 09/01/2022

{
        x <= 3;
}
