src/test/deca/syntax/invalid/SansObjet/IneqExpr3-Invalid.deca
// Description:
//    Greater or equal expression with invalid syntax.
//
// Results:
//    12:11 extraneous input '>' expecting {FLOAT, INT, '(', '-', '!', 'false',
//    'null', 'readInt', 'readFloat', 'true', IDENT, STRING, NEW, THIS}
//
// Historique:
//    cree le 09/01/2022

{
        x => 3;
}
